Correct issue of triple clicking and scrolling up.

Fixes selecting text by triple click and scrolling up causes only the
visible contents to be selected.

Thanks to Shlomi Fish (shlomif@iglu.org.il) for research and patch.

BUG: 256353
REVIEW: 103724
FIXED-IN: 4.9